# Unlocking-Data-with-Generative-AI-and-RAG

./: .gitignore  pyproject.toml
Chapter_01/: README.md
Chapter_02/: CHAPTER2-1_RAG_PIPELINE.ipynb
